...
    <string name="app_name">Smart Biz Card</string>
    <!--Strings for main menu-->
    <string name="sendcard">Send Biz Card</string>
    <string name="receivecard">Receive Biz Card</string>
    <string name="updateinfo">View My Card</string>
    <string name="edit_nfc">Details on NFC Card</string>
    <string name="managecards">Manage Cards</string>
    <!--Strings for View Details-->
    <string name="defaultname">User Fullname</string>
    <string name="defaultjob">Job Title</string>
    <string name="personal">+27 81 234 5678</string>
    <string name="office">+27 14 225 1452</string>
    <string name="email">example@epiuse.com</string>
    <string name="address">1056 Lynnwood Rd, Brooklyn, Pretoria, 0031</string>
    <string name="company">EPI-USE South Africa</string>
    <!--Strings for Manage Cards-->
    <string name="recievedcards">View Cards</string>
    <string name="readcard">Read Information</string>
    <string name="deletecard">Delete Information</string>
    <string name="updatecard">Write Information</string>
    <!--Strings for Log in-->
    <string name="loginemailbanner">Please enter email:</string>
    <string name="loginemail">Email</string>
    <string name="loginpasswordbanner">Please enter password:</string>
    <string name="loginpassword">Password</string>
    <string name="enter">Log in</string>
    <string name="register">No account? Register now.</string>
    <!--Strings for Registration-->
    <string name="create_account">Create Account</string>
    <!--Strings for recieve qr -->
    <string name="qrscanbanner">Activate QR Scanner</string>
    <string name="qrscan">Activate Scanner</string>
...
    <string name="update_account">Update Details</string>
    <!--Strings for receiver interface-->
    <string name="receiverbanner">Business Card Details:</string>
    <!--Strings for receive interface-->
    <string name="receivebanner">Select A Receiving Option:</string>
    <string name="nfcreceive">NFC</string>
    <string name="qrreceive">QR Scanner</string>
    <string name="tapreceive">Touch to Receive Details</string>

    <!-- Strings related to Fragments-->
    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_delete_error">Error deleting details !</string>
    <string name="message_write_success">Successfully written to Card !</string>
...
    <!--ORC-->
    <string name="photo">Photo</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- OCR Library -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Storage doesn\'t available</string>
    <string name="title_activity_ocr">Ocr Capture Activity</string>

    <!--Agreement-->
...
