...
        android:layout_weight="2"
        android:padding="@dimen/padding"
        android:weightSum="2"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:textColor="@color/white"
            android:text="@string/nfcreceive"
...
            android:drawableLeft="@mipmap/sendingphone"
            android:drawableRight="@mipmap/sendingphoner"
            android:textStyle="bold"
            android:onClick="openNFCRecieve"
            />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:text="@string/qrreceive"
            android:textSize="@dimen/fontsize"
...
