...
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:background="@color/transparent"
                android:drawableTop="@drawable/ic_qr_code"
                android:text="@string/qrscan"
                android:id="@+id/scan_btn"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scanned"
            android:visibility="invisible"
            android:layout_width="match_parent"
...
